# UVG

./: Makefile.am  README.adoc  configure.ac
UVG/: uvg.c
UVG/common/: common.c  common.h  structs.h
UVG/common/logger/: uvglog.c  uvglog.h
UVG/common/strings/: uvgstrings.c  uvgstrings.h
UVG/common/xmlparser/: xmlreader.c  xmlreader.h
UVG/drivers/: driverlist.h
config/: variables.xml.sample
tools/: loggitversion.sh
